{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 110,
  "lineage": "aed0e548-d495-75e6-d722-2392ba854cbc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094125af156557ca2",
            "arn": "arn:aws:ec2:us-west-2:649094558971:instance/i-0996b4adf04d6ee25",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-access-profile",
            "id": "i-0996b4adf04d6ee25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andriy.aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fd2ba3803fbaf029"
              }
            ],
            "primary_network_interface_id": "eni-0fd2ba3803fbaf029",
            "private_dns": "ip-10-0-2-52.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f630f98fd510a44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb254c62e40efff7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc49c205a8eb2b3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-access-profile",
            "aws_iam_role.ec2-access-role",
            "aws_network_interface.private-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.private-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094125af156557ca2",
            "arn": "arn:aws:ec2:us-west-2:649094558971:instance/i-079563129ea213a72",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-access-profile",
            "id": "i-079563129ea213a72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andriy.aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f8aa343df005e7ba"
              }
            ],
            "primary_network_interface_id": "eni-0f8aa343df005e7ba",
            "private_dns": "ip-10-0-1-5.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_ip": "35.90.3.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0309ccc3f9cbb06b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042780ec8057e6a83",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc49c205a8eb2b3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-access-profile",
            "aws_iam_role.ec2-access-role",
            "aws_network_interface.public-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f95da1ca59f7dea0",
            "arn": "arn:aws:ec2:us-west-2:649094558971:instance/i-0d53e1f2021667ef3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d53e1f2021667ef3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andriy.aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0294fa87923734840"
              }
            ],
            "primary_network_interface_id": "eni-0294fa87923734840",
            "private_dns": "ip-10-0-1-152.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_ip": "35.89.148.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01569e55547bce1c5",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-042780ec8057e6a83",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc49c205a8eb2b3"
            ]
          },
          "dependencies": [
            "aws_network_interface.nat-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:internet-gateway/igw-03575b51143a8579d",
            "id": "igw-03575b51143a8579d",
            "owner_id": "649094558971",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/56d9e69fe142e5c0",
            "arn_suffix": "app/lb/56d9e69fe142e5c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-421927558.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/56d9e69fe142e5c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f7fa131dca2e37e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042780ec8057e6a83"
              },
              {
                "subnet_id": "subnet-0bb254c62e40efff7"
              }
            ],
            "subnets": [
              "subnet-042780ec8057e6a83",
              "subnet-0bb254c62e40efff7"
            ],
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "vpc_id": "vpc-0cb898f28db9a1f10",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.my_sc_http_lb",
            "aws_subnet.private-sb",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:listener/app/lb/56d9e69fe142e5c0/5baf869c8c0fbfb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:listener/app/lb/56d9e69fe142e5c0/5baf869c8c0fbfb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/56d9e69fe142e5c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-week4",
            "aws_lb_target_group.lb-target-group-week4",
            "aws_security_group.my_sc_http_lb",
            "aws_subnet.private-sb",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group-week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7",
            "arn_suffix": "targetgroup/tg/48c1e822e9d394d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private-lb-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7-20221213103642210000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7",
            "target_id": "i-0996b4adf04d6ee25"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-access-profile",
            "aws_iam_role.ec2-access-role",
            "aws_instance.private-instance",
            "aws_lb_target_group.lb-target-group-week4",
            "aws_network_interface.private-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.private-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public-lb-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7-20221213103626813900000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/48c1e822e9d394d7",
            "target_id": "i-079563129ea213a72"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-access-profile",
            "aws_iam_role.ec2-access-role",
            "aws_instance.public-instance",
            "aws_lb_target_group.lb-target-group-week4",
            "aws_network_interface.public-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nat-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:network-interface/eni-0294fa87923734840",
            "id": "eni-0294fa87923734840",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:24:18:68:ca:6d",
            "owner_id": "649094558971",
            "private_ip": "10.0.1.152",
            "private_ip_list": [
              "10.0.1.152"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.152"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07bc49c205a8eb2b3"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-042780ec8057e6a83",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            }
          },
          "dependencies": [
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:network-interface/eni-0fd2ba3803fbaf029",
            "id": "eni-0fd2ba3803fbaf029",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:21:8b:48:b1:6f",
            "owner_id": "649094558971",
            "private_ip": "10.0.2.52",
            "private_ip_list": [
              "10.0.2.52"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.52"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07bc49c205a8eb2b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb254c62e40efff7",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            }
          },
          "dependencies": [
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.private-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:network-interface/eni-0f8aa343df005e7ba",
            "id": "eni-0f8aa343df005e7ba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8c:2b:f1:dd:e7",
            "owner_id": "649094558971",
            "private_ip": "10.0.1.5",
            "private_ip_list": [
              "10.0.1.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07bc49c205a8eb2b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042780ec8057e6a83",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            }
          },
          "dependencies": [
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:route-table/rtb-0f750ec0acffe802c",
            "id": "rtb-0f750ec0acffe802c",
            "owner_id": "649094558971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d53e1f2021667ef3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.public-nat",
            "aws_network_interface.nat-network-interface",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:route-table/rtb-0e31b649d8a0f53db",
            "id": "rtb-0e31b649d8a0f53db",
            "owner_id": "649094558971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03575b51143a8579d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-to-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07317804a4a9bec27",
            "route_table_id": "rtb-0f750ec0acffe802c",
            "subnet_id": "subnet-0bb254c62e40efff7"
          },
          "dependencies": [
            "aws_instance.public-nat",
            "aws_network_interface.nat-network-interface",
            "aws_route_table.private-route",
            "aws_security_group.my_group_ssh_http",
            "aws_subnet.private-sb",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-to-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2e853809e3118c",
            "route_table_id": "rtb-0e31b649d8a0f53db",
            "subnet_id": "subnet-042780ec8057e6a83"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.public-route",
            "aws_subnet.public-sb",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_group_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-07bc49c205a8eb2b3",
            "description": "Enable HTTP access via port 80 + SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bc49c205a8eb2b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group_ssh_http",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sc_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-09f7fa131dca2e37e",
            "description": "Enable HTTP for LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f7fa131dca2e37e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_sc_http_lb",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-0bb254c62e40efff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb254c62e40efff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-042780ec8057e6a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042780ec8057e6a83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            },
            "vpc_id": "vpc-0cb898f28db9a1f10"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:vpc/vpc-0cb898f28db9a1f10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f72c838f0d0d75b4",
            "default_route_table_id": "rtb-085dd86d8a4d171da",
            "default_security_group_id": "sg-0d57c4ed09ede3ecb",
            "dhcp_options_id": "dopt-0b6baaed953b6e0c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb898f28db9a1f10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085dd86d8a4d171da",
            "owner_id": "649094558971",
            "tags": {
              "Name": "week4"
            },
            "tags_all": {
              "Name": "week4"
            }
          }
        }
      ]
    }
  ]
}